HIVE 参数细化